restored logging a bit. added junit 5 to dependencies, created one test for slightly refactored calculator class test